--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ keywords = ["aiida", "plugin"]
 requires-python = ">=3.7"
 dependencies = [
     "aiida-core>=2.5,<3",
-    "voluptuous"
+    "voluptuous",
+    "aiida-quantumespresso~=4.6.0",
+    "aiida-wannier90-workflows @ git+https://github.com/aiidateam/aiida-wannier90-workflows",
+    "koopmans @ git+https://github.com/mikibonacci/koopmans@feature/ase-to-pw"
 ]
 
 [project.urls]
@@ -47,9 +50,6 @@ docs = [
     "sphinxcontrib-details-directive",
     "furo",
     "markupsafe<2.1",
-    "aiida-quantumespresso~=4.6.0",
-    "aiida-wannier90-workflows @ git+https://github.com/aiidateam/aiida-wannier90-workflows",
-    "koopmans @ git+https://github.com/mikibonacci/koopmans@feature/ase-to-pw"
 ]
 
 # todo: Refine entry points here rather than just `koopmans`
